# AskC

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  askc.cpp  test.cpp
include/: gemini.h  request.h
libpsl_src-install/lib/x86_64-linux-gnu/pkgconfig/: libpsl.pc
src/: askc.cpp
src/settings/: CMakeLists.txt  settings.cpp  settings.h
